# new-ai-news-site

./: .env.example  .gitignore  BUGREPORT.md  README.md  VERIFY.md  collect_and_evaluate.py  collect_and_evaluate_simple.py  collect_complete.py  collect_comprehensive.py  collect_comprehensive_2025.py  collect_enhanced_sources.py  collect_integrated.py  collect_japanese_sources.py  collect_simple_2025.py  collect_url_filtered.py  collect_x_posts.py  debug_spreadsheet.py  evaluation_system.py  execute_collection.bat  generate_demo_simple.py  generate_demo_site.py  improved-requirements-doc.html  package.json  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  requirements_full.txt  run_2025_comprehensive.py  run_audits.bat  run_collection.py  run_complete_collection.py  run_daily_with_x.py  run_demo_generation.bat  run_enhanced_ai_news.py  run_integrated.bat  run_japanese_now.py  run_phase4_tests.py  run_real_collection.py  run_simple_2025.py  (+19 more)
.gen-venv/: pyvenv.cfg
.github/workflows/: deploy.yml  diag.yml  news.yml  refresh.yml  run_refresh_once.yml  static.yml  test.yml
.serena/: project.yml
config/: development.yaml  production.yaml  source_scores.json  sources.json
data/: news.schema.json
docs/: README.md  _config.yml  feed.xml  index.html  index_clean.html  manifest.json  script.js  sitemap.xml  styles.css
docs/data/: news.enriched.json  news.generated.json  news.raw.json
patches/: 20250825140153-improvements.diff  20250825140414-improvements-2.diff  20250825141701-axe-lh-ci.diff  20250825150207-integrated-python-ci.diff
scripts/: __init__.py  integrated_build.py  run_integrated.ps1  setup.py
scripts/audit/: axe.js  html.js  links.js
scripts/news/: collect.ts  enrich.ts  score.ts
scripts/tests/: verify_acceptance.js
src/: __init__.py  main.py
src/config/: __init__.py  (+1 more)
tests/: __init__.py  conftest.py  test_basic.py
trigger/: diag-run.txt  news-run.txt
参考/: Xソース.txt  エラー.txt  一時連携.txt  依頼２.txt  要件追加.txt  連携内容.txt
(+23 files in other folders)
