[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "daily-ai-news"
version = "2.0.0"
description = "AI News Aggregation and Evaluation Platform"
authors = [{"name" = "Daily AI News", "email" = "admin@example.com"}]
readme = "docs/README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://awano27.github.io/new-ai-news-site/"
"Bug Tracker" = "https://github.com/awano27/new-ai-news-site/issues"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=html --cov-report=term-missing"

[tool.ruff]
select = ["E", "F", "I", "N", "W"]
line-length = 100
target-version = "py311"